# RaychelCPU

./: .clang-format  .clang-tidy  .gitignore  ASAN_suppressions.txt  CMakeLists.txt  LICENSE  README.md
RaychelEngine/: CMakeLists.txt  FindRequiredLibraries.cmake  Makefile  RaychelCPU_test  cmake_install.cmake
RaychelEngine/include/: CMakeSettings.h  CMakeSettings.h.in
RaychelEngine/include/Raychel/: Raychel.h
RaychelEngine/include/Raychel/Core/: Forward.h  LinkTypes.h  Raychel_assert.h  Types.h  compat.h  export.h  forward.h  utils.h
RaychelEngine/include/Raychel/Core/RaychelMath/: Quaternion.h  Transform.h  color.h  constants.h  equivalent.h  math.h  vec2.h  vec3.h  vector.h
RaychelEngine/include/Raychel/Core/RaychelMath/Impl/: QuaternionImpl.inl  TransformImpl.inl  TypesImpl.h  colorImpl.inl  vec2Impl.inl  vec3Impl.inl  vectorImpl.inl
RaychelEngine/include/Raychel/Engine/Interface/: Camera.h  Scene.h
RaychelEngine/include/Raychel/Engine/Lights/: Interface.h  lamps.h
RaychelEngine/include/Raychel/Engine/Materials/: Interface.h  Materials.h
RaychelEngine/include/Raychel/Engine/Objects/: Interface.h  lights.h  sdObjects.h
RaychelEngine/include/Raychel/Engine/Raymarchable/: Interface.h  lights.h  sdObjects.h
RaychelEngine/include/Raychel/Engine/Rendering/: Renderer.h
RaychelEngine/include/Raychel/Engine/Rendering/Pipeline/: Shading.h  Tracing.h
RaychelEngine/include/Raychel/Engine/Rendering/RenderTarget/: AsciiTarget.h  ImageTarget.h  NullTarget.h  RenderTarget.h
RaychelEngine/include/Raychel/Misc/Exceptions/: Exception_context.h
RaychelEngine/include/Raychel/Misc/RNG/: BufferedRNG.h  randomImpl.inl
RaychelEngine/include/Raychel/Misc/Texture/: CubeTexture.h  Texture.h  TextureProvider.h  TextureType.h
RaychelEngine/include/Raychel/Misc/Utils/: DynArray.h
RaychelEngine/src/Raychel/: Types.cpp
RaychelEngine/src/Raychel/Engine/Interface/: Camera.cpp  Scene.cpp
RaychelEngine/src/Raychel/Engine/Materials/: Interface.cpp  Materials.cpp
RaychelEngine/src/Raychel/Engine/Objects/: Interface.cpp  sdObjects.cpp
RaychelEngine/src/Raychel/Engine/Raymarchable/: Interface.cpp  sdObjects.cpp
RaychelEngine/src/Raychel/Engine/Rendering/: Renderer.cpp
RaychelEngine/src/Raychel/Engine/Rendering/Pipeline/: RaymarchMath.cpp  Shading.cpp  Tracing.cpp
RaychelEngine/src/Raychel/Engine/Rendering/RenderTarget/: AsciiImpl.cpp  AsciiTarget.cpp  ImageTarget.cpp
RaychelEngine/src/test/: CMakeLists.txt  InheritanceVsTypeDeletion.cpp  main.cpp  random_main.cpp
RaychelEngine/src/test/RaychelMath/: Quaternion.test.cpp  color.cpp  color.test.cpp  floating_equality.test.cpp  vec3.test.cpp
RaychelLogger/: CMakeLists.txt  Makefile  cmake_install.cmake
RaychelLogger/include/: Helper.h  Logger.h
RaychelLogger/src/: Logger.cpp
RaychelLogger/src/tests/: main.cpp
include/: CMakeSettings.h.in
include/Raychel/Core/: Types.h
include/Raychel/Core/RaychelMath/: Quaternion.h  color.h  constants.h  vec3.h
include/Raychel/Core/RaychelMath/Impl/: TypesImpl.h  colorImpl.inl  vec3Impl.inl
src/test/: main.cpp
